Fix Logic Bid